--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,7 @@
 }
 
 a {
-  font-weight: 500;
+  font-weight: 400;
   color: #646cff;
   text-decoration: inherit;
 }
@@ -36,11 +36,7 @@ body {
   padding: 0;
   min-width: 1280px;
   min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+  overflow: hidden;
 }
 
 button {
